[package]
name = "driving-physics"
version = "0.1.0"
edition = "2021"

[profile.dev.package."*"]
opt-level = 0

[dependencies]
bevy = { version = "0.11.2", features = ["dynamic_linking"] }
bevy_xpbd_3d = { git = "https://github.com/Jondolf/bevy_xpbd", branch = "main", features = [
  "debug-plugin",
  "simd",
] }
